--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "multer": "^2.0.2",
     "mysql2": "^3.6.5"
   },
   "devDependencies": {
